<resources>
    <string name="app_name">Sharehood</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiaGF0aWNlbnVyYWdiYSIsImEiOiJjazQyY3BrY2IwNDUzM21vZnU5N3B1OGd2In0.Y0SNpCUqzfrsia0hJ4M3KA</string>
    <string name="user_location_permission_explanation">Give permission for location</string>
    <string name="user_location_permission_not_granted">Permission could not be taken</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="verify_password">Verify Password</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="sharehood">Sharehood</string>
    <string name="your_notes_for_your_dear_guest">Your notes for your dear guest :)</string>
    <string name="name_of_food">Name of food</string>
    <string name="i_am_done">Done!</string>
    <string name="phone_number">Phone Number</string>
    <string name="i_am_coming">I am coming!</string>
    <string name="guest_s_name">Guest\'s Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="host_name">Host\'s Name</string>
    <string name="notifications">Notifications</string>
    <string-array name="category_array">
        <item>Choose Food Category</item>
        <item>Meal</item>
        <item>Dairy Product</item>
        <item>Fruit &amp; Vegetable</item>
        <item>Bevarage</item>
        <item>Bread &amp; Pastry</item>
    </string-array>
</resources>
