<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/gradient_background"
        android:tintMode="src_over"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/app_icon_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3">

    </ImageView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/sadie"
        android:text="@string/sharehood"
        android:textColor="@color/white"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/login_activity_editEmail"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/ic_envelope"
        android:drawablePadding="8dp"
        android:hint="@string/email"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:lines="1"
        android:outlineAmbientShadowColor="@color/white"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:drawablePadding="8dp"
        android:drawableLeft="@drawable/ic_lock"
        android:hint="@string/password"
        android:id="@+id/login_activity_editPassword"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginHorizontal="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_activity_editEmail"
        android:layout_marginTop="16dp"
        android:inputType="textPassword"
        android:lines="1"
        android:imeOptions="actionDone"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textColorHighlight="@color/white"
        android:outlineAmbientShadowColor="@color/white"
        android:backgroundTint="@color/white"/>


    <Button
        android:id="@+id/login_activity_btnLogin"
        android:layout_width="0dp"
        android:layout_height="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_activity_editPassword"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="32dp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/white"
        android:text="@string/login"
        android:textSize="16sp"
        android:textAllCaps="false"/>

    <Button
        android:text="@string/register"
        android:id="@+id/login_activity_btnRegister"
        android:layout_width="0dp"
        android:layout_height="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/login_activity_btnLogin"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:textAllCaps="false"/>

</androidx.constraintlayout.widget.ConstraintLayout>