<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">


    <ImageView

        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@color/colorAccent"
        android:tintMode="src_over"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <ImageView
       android:outlineSpotShadowColor="@color/black"
        android:id="@+id/imageView"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/app_icon_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2">

    </ImageView>


    <EditText
        android:id="@+id/signup_activity_username"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/ic_man_user"
        android:drawablePadding="8dp"
        android:hint="@string/username"
        android:imeOptions="actionNext"
        android:inputType="textPersonName"
        android:lines="1"
        android:outlineAmbientShadowColor="@color/white"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/signup_activity_email"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/ic_envelope"
        android:drawablePadding="8dp"
        android:hint="@string/email"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:lines="1"
        android:outlineAmbientShadowColor="@color/white"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_activity_username" />

    <EditText
        android:drawablePadding="8dp"
        android:drawableLeft="@drawable/ic_lock"
        android:hint="@string/password"
        android:id="@+id/signup_activity_password"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginHorizontal="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup_activity_email"
        android:layout_marginTop="16dp"
        android:inputType="textPassword"
        android:lines="1"
        android:imeOptions="actionNext"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textColorHighlight="@color/white"
        android:outlineAmbientShadowColor="@color/white"
        android:backgroundTint="@color/white"/>
    <EditText
        android:drawablePadding="8dp"
        android:id="@+id/signup_activity_verify_password"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/ic_lock"
        android:hint="@string/verify_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:lines="1"
        android:outlineAmbientShadowColor="@color/white"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_activity_password" />


    <Button
        android:id="@+id/signup_activity_register"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/white"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="40dp"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_activity_verify_password" />


</androidx.constraintlayout.widget.ConstraintLayout>