<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddLocationActivity">

    <ImageView
        android:id="@+id/add_location_imageview"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.054"
        android:src="@drawable/add_image">
    </ImageView>

    <Spinner
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:id="@+id/add_location_category_spinner"
        android:layout_marginHorizontal="36dp"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_location_imageview"
        app:layout_constraintVertical_bias="0.038"
        />

    <EditText
        android:id="@+id/add_location_name_of_food"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        android:hint="@string/name_of_food"
        android:imeOptions="actionNext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_location_category_spinner"
        app:layout_constraintVertical_bias="0.04"
        android:backgroundTint="@color/white"
        android:outlineAmbientShadowColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        />

    <EditText
        android:id="@+id/add_location_notes"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:maxLength="140"
        android:layout_marginHorizontal="36dp"
        android:hint="@string/your_notes_for_your_dear_guest"
        android:ems="10"
        android:imeOptions="actionDone"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_location_name_of_food"
        app:layout_constraintVertical_bias="0.077"
        android:backgroundTint="@color/white"
        android:outlineAmbientShadowColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        />

    <Button
        android:id="@+id/add_location_button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="36dp"
        android:background="@color/colorPrimary"
        android:text="@string/i_am_done"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.777"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_location_notes"
        app:layout_constraintVertical_bias="0.111"
        />


</androidx.constraintlayout.widget.ConstraintLayout>